--- a/.github/workflows/benchmark-pr.yml
+++ b/.github/workflows/benchmark-pr.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Reject multi-day PR
         if: steps.detect.outputs.error != ''
-        uses: actions/github-script@v7
+        uses: actions/github-script@v8
         with:
           script: |
             await github.rest.issues.createComment({
@@ -66,13 +66,13 @@ jobs:
           fetch-depth: 0
 
       - name: Setup Rust
-        uses: dtolnay/rust-action@stable
+        uses: dtolnay/rust-toolchain@stable
 
       - name: Install cargo-aoc
         run: cargo install cargo-aoc
 
       - name: Set AOC credentials
-        run: cargo aoc credentials -s ${{ secrets.AOC_TOKEN }}
+        run: cargo aoc credentials ${{ secrets.AOC_TOKEN }}
 
       - name: Download input
         run: cargo aoc input -d ${{ needs.detect.outputs.day }} -y 2025
@@ -83,7 +83,7 @@ jobs:
           cp -r input /tmp/saved_input
 
       - name: Checkout main branch
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
         with:
           ref: main
           clean: false
@@ -118,7 +118,7 @@ jobs:
 
       - name: Comment on failure
         if: failure()
-        uses: actions/github-script@v7
+        uses: actions/github-script@v8
         with:
           script: |
             await github.rest.issues.createComment({
@@ -142,13 +142,13 @@ jobs:
           fetch-depth: 0
 
       - name: Setup Rust
-        uses: dtolnay/rust-action@stable
+        uses: dtolnay/rust-toolchain@stable
 
       - name: Install cargo-aoc
         run: cargo install cargo-aoc
 
       - name: Set AOC credentials
-        run: cargo aoc credentials -s ${{ secrets.AOC_TOKEN }}
+        run: cargo aoc credentials ${{ secrets.AOC_TOKEN }}
 
       - name: Download input
         run: cargo aoc input -d ${{ needs.detect.outputs.day }} -y 2025
@@ -159,7 +159,7 @@ jobs:
           cp -r input /tmp/saved_input
 
       - name: Checkout main branch
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
         with:
           ref: main
           clean: false
@@ -213,7 +213,7 @@ jobs:
           echo "report=$REPORT" >> $GITHUB_OUTPUT
 
       - name: Post PR comment
-        uses: actions/github-script@v7
+        uses: actions/github-script@v8
         with:
           script: |
             const body = `${{ steps.compare.outputs.report }}\n\n---\n*Automated benchmark*`;
@@ -248,7 +248,7 @@ jobs:
 
       - name: Auto-approve PR
         if: steps.compare.outputs.pass == 'true'
-        uses: actions/github-script@v7
+        uses: actions/github-script@v8
         with:
           script: |
             await github.rest.pulls.createReview({
