--- a/.github/workflows/benchmark-pr.yml
+++ b/.github/workflows/benchmark-pr.yml
@@ -97,7 +97,11 @@ jobs:
         id: extract
         run: |
           PR_RESULT=$(grep -E "Part [12] :" /tmp/pr_result.txt || cat /tmp/pr_result.txt)
-          echo "pr_result=$PR_RESULT" >> $GITHUB_OUTPUT
+          {
+            echo "pr_result<<EOF"
+            echo "$PR_RESULT"
+            echo "EOF"
+          } >> $GITHUB_OUTPUT
           echo "Branch results: $PR_RESULT"
 
       - name: Compare with main
@@ -183,7 +187,11 @@ jobs:
 
           if grep -q "NOT_IMPLEMENTED" /tmp/main_bench.txt; then
             echo "pass=true" >> $GITHUB_OUTPUT
-            echo "report=## Day $DAY - New Implementation\n\nNo benchmark comparison needed." >> $GITHUB_OUTPUT
+            {
+              echo "report<<EOF"
+              echo -e "## Day $DAY - New Implementation\n\nNo benchmark comparison needed."
+              echo "EOF"
+            } >> $GITHUB_OUTPUT
             exit 0
           fi
 
@@ -217,7 +225,11 @@ jobs:
             echo "pass=false" >> $GITHUB_OUTPUT
           fi
 
-          echo "report=$REPORT" >> $GITHUB_OUTPUT
+          {
+            echo "report<<EOF"
+            echo -e "$REPORT"
+            echo "EOF"
+          } >> $GITHUB_OUTPUT
 
       - name: Post PR comment
         uses: actions/github-script@v7
