--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["solutions/*"]
+members = ["solutions/*/*/*", "cli"]
 
 [workspace.dependencies]
 ahash = "0.8.12"
