--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,19 +8,20 @@ clap = { version = "4", features = ["derive"] }
 libsql = "0.6"
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 inventory = "0.3"
-paste = "1"
+aoc-macros = { path = "macros" }
 ahash = "0.8.12"
 pathfinding = "4.14.0"
 petgraph = { version = "0.8.3", features = ["rayon"] }
 z3 = "0.19.5"
 
-[dev-dependencies]
-libtest-mimic = "0.8"
-divan = "0.1"
+[build-dependencies]
+quote = "1"
+proc-macro2 = "1"
+syn = "2"
+prettyplease = "0.2"
 
-[[test]]
-name = "verify"
-harness = false
+[dev-dependencies]
+divan = "0.1"
 
 [[bench]]
 name = "bench"
